--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="image/photo10683933508.jpg" />
       </div>
 
-      <h1>milad bahrami</h1>
+      <h1>alireza200411</h1>
       <p>full stack web developer</p>
 
       <div class="socials">
