--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
 
       <h1>alireza200411</h1>
-      <p>Python programmer</p>
+      <p>Backend programmer</p>
 
       <div class="socials">
         <i class="bi bi-instagram"></i>
